--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Sign Up</h1>
+  <%- include("partials/errors.ejs") %>
   <form action="/sign-up" method="POST">
     <label for="firstName">First Name</label>
     <input id="firstName" name="firstName" placeholder="First Name" type="text" required />
@@ -15,6 +16,8 @@
     <input id="username" name="username" placeholder="username" type="text" required />
     <label for="password">Password</label>
     <input id="password" name="password" type="password" required />
+    <label for="confirmPassword">Confirm Password</label>
+    <input id="confirmPassword" name="confirmPassword" type="password" required />
     <button type="submit">Sign Up</button>
   </form>
 </body>
