--- a/views/new-message.ejs
+++ b/views/new-message.ejs
@@ -4,7 +4,7 @@
     </head>
     <body>
         <%- include("partials/errors.ejs") %>
-        <form method="POST" action="/new-message">
+        <form method="POST" action="/message">
             <input type="text" name="message" placeholder="message" minlength="1" required>
             <button type="submit">Submit</button>
         </form>
